# alignak-module-example

./: .gitignore  .travis.yml  AUTHORS  MANIFEST.in  README.rst  setup.cfg  setup.py  version.py
alignak/modules/mod-example/: __init__.py  module.py  modules.py
alignak_module_example/: __init__.py  example.py
alignak_module_example/ALIGNAKETC/arbiter/modules/: mod-EXAMPLE.cfg
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  modexample_how_it_works.rst  modexample_setup.rst
etc/alignak/arbiter_cfg/modules/: mod-example.cfg
test/: alignak_test.py  requirements.py27.txt  requirements.py34.txt  requirements.txt  setup_test.sh  test_module.py
test/cfg/: cfg_default.cfg  mod-example.cfg
test/cfg/default/daemons/: arbiter-master.cfg  broker-master.cfg  poller-master.cfg  reactionner-master.cfg  receiver-master.cfg  scheduler-master.cfg
