[metadata]
name = mod-example
summary = Alignak example module
author = Thibault Cohen
author_email =  titilambert@gmail.com
license = GNU Affero General Public License
url = https://github.com/Alignak-monitoring/mod-example
description-file =
    README.rst

[files]
packages =
    alignak
    alignak.modules
    alignak.modules.mod_example
data_files =
    etc/ = etc/*

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

